# monolith-workspace

./: .eslintrc.cjs  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CONTEXT-MAP.html  CONTEXT-MAP.md  CONTEXT-MAP.th.html  CONTEXT-MAP.th.md  CONTEXT.html  CONTEXT.md  CONTEXT.th.html  CONTEXT.th.md  CONTRIBUTING.md  FIX_PLAN.md  INSTALL.md  INSTALL.txt  README.md  REQUIREMENTS-OVERVIEW.md  create-fenix-full.cjs  eslint.config.js  fix-drillmap-bolt-and-brun-dowels.patch  furniture-hardware.skill  furniture-research.skill  index.html  install-material-selector.sh  monolith-ct-dec-003-a1-review-input.sha256  monolith-dev-guide.skill  monolith-s17-v03-review-input.sha256  monolith-s17-v04-review-input.sha256  monolith-s17-v041-review-input.sha256  package-lock.json  package.json  playwright.config.ts  pyproject.toml  skills-report.md  tailwind.config.js  tsconfig.build.json  tsconfig.json  vite.config.ts  (+1 more)
.claude/: CLAUDE.md  context.md  decisions.md  launch.json  progress.md  settings.json  settings.local.json
.github/: CODEOWNERS
apps/: .gitkeep
contracts/: index.ts
coverage/: coverage-final.json  index.html
daph-second-brain/: Home.md  _inventory.json  _knowledge-export.json  _move-log.md
docs/: CONTRACT-REVIEW-CHECKLIST.md  Customer-Journey-End-to-End.html  Customer-Journey-End-to-End.md  DAPH-Organization-and-JD-Complete.html  DAPH-Organization-and-JD-Complete.md  DAPH-org-structure-from-JD-2025.html  DAPH-org-structure-from-JD-2025.md  DEVELOPER_GUIDE.md  JD-drafts-missing-positions-2026-07.html  JD-drafts-missing-positions-2026-07.md  PRD.html  PRD.md  (+32 more)
(+3411 files in other folders)
