[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monolith-kitchen-knowledge-kernel"
version = "0.1.0"
description = "Governed reference kernel for multi-tenant kitchen, cabinet, component, and manufacturing knowledge"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "packages/component-master/src"}

[tool.setuptools.packages.find]
where = ["packages/component-master/src"]
